--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -215,4 +215,9 @@
       {% endif %}
     </div>
   </div>
+  <div id="myComponent">
+    <!-- 这里是你要隐藏的组件内容 -->
+    <br />
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Wu0q-ojOowGYlibnaGIBPAINklcHwcG3WCVcbsHIvZw&cl=ffffff&w=a"></script>
+  </div>
 </div>
